--- a/lab3_style.css
+++ b/lab3_style.css
@@ -14,7 +14,7 @@
 
 .intro
 {
-    color: blue;
+    color: darkblue;
     text-align: center;
 }
 
@@ -66,4 +66,3 @@
       color: rgb(16, 10, 100);
   }
 
-  
